--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -34,7 +34,7 @@
     </header>
     <div class="hero flex items-center justify-between" id="hero">
        <div class="left flex-1 justify-center">
-            <img src="/media/modelo.jpg" alt="Profile">
+            <img src="media/modelo.jpg" alt="Profile">
        </div>
        <div class="right flex-1">
             <h6>Fábio Santos</h6>
@@ -48,7 +48,7 @@
     <section class="about" id="about">
         <div class="container flex items-center">
             <div class="left flex-1 justify-right">
-                <img src="/media/sexta feira.jpg" alt="fotoSobre" height="350px">
+                <img src="media/sexta feira.jpg" alt="fotoSobre" height="350px">
             </div>
             <div class="right flex-1">
                 <h1>Sobre <span>Mim</span></h1>
@@ -67,10 +67,10 @@
             </div>
             <div class="bottom flex">
                 <div class="tecs flex">
-                    <div class="tec" id="html"><img src="/media/html.png" alt="html"></div>
-                    <div class="tec"id="css"><img src="/media/css.png" alt="css"></div>
-                    <div class="tec" id="js"><img src="/media/js.png" alt="js"></div>
-                    <div class="tec"id="mysql"><img src="/media/mysql.png" alt=""></div>
+                    <div class="tec" id="html"><img src="media/html.png" alt="html"></div>
+                    <div class="tec"id="css"><img src="media/css.png" alt="css"></div>
+                    <div class="tec" id="js"><img src="media/js.png" alt="js"></div>
+                    <div class="tec"id="mysql"><img src="media/mysql.png" alt=""></div>
                     <div class="tec"></div>
                     <div class="tec"></div>
                 </div>
