--- a/Down_midias/index.html
+++ b/Down_midias/index.html
@@ -4,34 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donwload</title>
-    <style>
-        body{
-            display: flex;
-            justify-content: center;
-            align-items: center;flex-direction: column;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,300;0,500;0,700;1,100;1,300&family=Playfair+Display&display=swap" rel="stylesheet">
+    <title>Download midias online</title>
+    
 </head>
 <body>
-    <h4>Teste para Donwload</h4>
-    <button onclick="baixar()" id="btn">Botão</button>
-    teste teste
-    <div id="baixado"></div>
+    <header class="flex">
+        <h1 id="title">titulo</h1>
+        <nav class="flex nav">
+            <ul class="flex">
+                <li>Instructions</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container flex" id="main">
+        <section class="flex hero">
+            <div class="flex box">
+                <div class="top flex">titulos</div>
+                <div class="bottom flex">
+                    <div class="bottom-a flex">
+                        <label for="txturl">Link:</label>
+                        <input type="url" name="txturl" id="txturl">
+                        <label for="mp3">MP3:</label>
+                        <input type="radio" name="mpx" id="mp3">
+                        <label for="mp4">MP4:</label>
+                        <input type="radio" name="mpx" id="mp4">
+                    </div>
+                    <div class="bottom-a flex">
+                        <label for="quality">Qualidade: </label>
+                        <select name="quality" id="quality">
+                            <option value="140p">140p</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="result flex">onde vai mostrar o carregamento</div>
+            </div>
+        </section>
+    </div>
+    <footer>
+        meus dados
+    </footer>
 </body>
-<iframe width="727" height="409" src="https://www.youtube.com/embed/8SbUC-UaAxE" title="Guns N' Roses - November Rain" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<script>
-
-    //nessa função, faz o download do arquivo passado pelo script.
-    //o iframa que iria gerar através do download nao aparece.
-    //mostrando so o arquivo baixado.
-        
-
-    function baixar() {
-        let b = document.createElement('iframe');
-        b.setAttribute('src', 'http://localhost:3600/download')
-        console.log(b);
-        document.querySelector('#baixado').appendChild(b).setAttribute('style','display: none')
-    }
-</script>
 </html>
