--- a/Down_midias/index.html
+++ b/Down_midias/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css"  href="/Down_midias/public/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,300;0,500;0,700;1,100;1,300&family=Playfair+Display&display=swap" rel="stylesheet">
     <title>Download midias online</title>
     
@@ -22,29 +22,37 @@
     <div class="container flex" id="main">
         <section class="flex hero">
             <div class="flex box">
-                <div class="top flex">titulos</div>
+                <div class="top flex">Down Love Media</div>
                 <div class="bottom flex">
                     <div class="bottom-a flex">
                         <label for="txturl">Link:</label>
-                        <input type="url" name="txturl" id="txturl">
-                        <label for="mp3">MP3:</label>
-                        <input type="radio" name="mpx" id="mp3">
-                        <label for="mp4">MP4:</label>
-                        <input type="radio" name="mpx" id="mp4">
+                        <input type="url" name="txturl" id="txturl" class="flex">
                     </div>
                     <div class="bottom-a flex">
-                        <label for="quality">Qualidade: </label>
-                        <select name="quality" id="quality">
-                            <option value="140p">140p</option>
-                        </select>
+                        <div class="qualidade">
+                            <label for="quality">Qualidade: </label>
+                            <select name="quality" id="quality">
+                                <option value="140p">140p</option>
+                            </select>
+                        </div>
+                        <div class="radio flex">
+                            <label for="mp3">MP3:</label>
+                            <input type="radio" name="mpx" id="mp3" onclick="check(id)">
+                            <label for="mp4">MP4:</label>
+                            <input type="radio" name="mpx" id="mp4" checked onclick="check(id)">
+                        </div>
                     </div>
                 </div>
-                <div class="result flex">onde vai mostrar o carregamento</div>
+                <div class="result flex">
+                    <button class="btnDown flex" onclick="down()">DOWNLOAD</button>
+                </div>
             </div>
         </section>
     </div>
     <footer>
-        meus dados
+        <footer class="flex"><span> Creat by Fábio Santos || ÇHAMP$ - 2022</span></footer>
     </footer>
+    <script src="scritp.js"></script>
+    <script type ="module"src="app.js"></script>
 </body>
 </html>
