--- a/Down_midias/index.html
+++ b/Down_midias/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css"  href="/Down_midias/public/style.css">
+    <link rel="stylesheet" type="text/css"  href="public/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,300;0,500;0,700;1,100;1,300&family=Playfair+Display&display=swap" rel="stylesheet">
     <title>Download midias online</title>
-    
+    <script src="script.js"></script>
+    <script src="app.js" type="module"></script>
 </head>
 <body>
     <header class="flex">
@@ -44,7 +45,7 @@
                     </div>
                 </div>
                 <div class="result flex">
-                    <button class="btnDown flex" onclick="down()">DOWNLOAD</button>
+                    <button id="btnDown"class="btnDown flex" onclick="down()" title="Download">DOWNLOAD</button>
                 </div>
             </div>
         </section>
@@ -52,7 +53,5 @@
     <footer>
         <footer class="flex"><span> Creat by Fábio Santos || ÇHAMP$ - 2022</span></footer>
     </footer>
-    <script src="scritp.js"></script>
-    <script type ="module"src="app.js"></script>
 </body>
 </html>
