--- a/ComponenteQRCode/index.html
+++ b/ComponenteQRCode/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -37,12 +37,12 @@
       justify-content: center;
       align-items: center;
       background-color: hsl(0, 0%, 100%);
-      padding: 1em;
+      padding: .8em;
       border-radius: 10px;
       
     }
     .code img {
-      max-width: 200px;
+      max-width: 250px;
       border-radius: 5px;
       margin-bottom: 10px;
     }
